--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,7 +79,8 @@ body {
   color: var(--text-main);
   /* Plus Jakarta Sans aik bohat hi professional aur modern font hai */
   font-family: "Plus Jakarta Sans", sans-serif;
-  transition: background-color 0.3s ease;
+  /* transition: background-color 0.15s ease; */
+  /* transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 /* Scrollbar Styling for Premium Look */
@@ -141,4 +142,4 @@ body {
   border-bottom: 1px solid #1e293b;
 }
 
-/* Global Font Apply */
+
